--- a/cra-template-spa-demo/package.json
+++ b/cra-template-spa-demo/package.json
@@ -1,24 +1,14 @@
 {
     "name": "cra-template-spa-demo",
-    "version": "1.1.2",
+    "version": "1.0.0",
     "keywords": [
       "react",
       "create-react-app",
-      "template"
+      "template",
+      "typescript"
     ],
-    "description": "The base template for Create React App.",
-    "repository": {
-      "type": "git",
-      "url": "https://github.com/lamontacrook/cra-template-spa-demo.git",
-      "directory": "packages/cra-template-spa-demo"
-    },
-    "license": "MIT",
-    "engines": {
-      "node": ">=14"
-    },
-    "bugs": {
-      "url": "https://github.com/lamontacrook/cra-template-spa-demo/issues"
-    },
+    "main": "template.json",
+    "description": "The base template for React apps hosted within our project",
     "files": [
       "template",
       "template.json"
