--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "cra-template",
-    "version": "1.1.2",
+    "name": "@lamont/cra-template-aem-spa-demo",
+    "version": "0.0.1",
     "keywords": [
       "react",
       "create-react-app",
